--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <li>haha</li>
+<li>yaun</li>
 
 <textarea id="editor_id" name="content" style="height: 400px" >{{ text }}</textarea>
 
