--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 <body>
 <li>haha</li>
 <li>yaun</li>
-
+<li>hahahah</li>
 <textarea id="editor_id" name="content" style="height: 400px" >{{ text }}</textarea>
 
 <script src="/static/kindeditor/kindeditor-all-min.js"></script>
